--- a/src/DesignEngine/H.LowCode.DesignEngine.Components/Components/GridLayout.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Components/Components/GridLayout.razor
@@ -7,7 +7,7 @@
             @for (var i = 0; i < Cols; i++)
            {
                 <GridCol Span="@(24/Cols)" Style="width:100%; background-color:#f4f4f4; border: 1px dashed #ded9d9;">
-                    <ComponentContainer></ComponentContainer>
+                    <DropItemContainer></DropItemContainer>
                 </GridCol>
            }
         </GridRow>
