--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
@@ -14,7 +14,7 @@
     background-color: #ffffff;
 }
 
-    .dropitem:hover {
+    .dropitem:not(.dropitem-selected):hover {
         outline: #1890ff dashed 2px;
     }
 
