修复跨 DropItemContainer 拖拽部分 bug

--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
@@ -1,5 +1,4 @@
-﻿/* ================== DropItem.razor ==================== */
-.dropitem-box {
+﻿.dropitem-box {
     height: 85px;
     border: #f0f2f5 solid 2px;
 }
@@ -15,7 +14,7 @@
 }
 
     .dropitem:not(.dropitem-selected):hover {
-        outline: #1890ff dashed 2px;
+        outline: #1890ff dashed 1.5px;
     }
 
 .dropitem-selected {
