--- a/src/DesignEngine/H.LowCode.DesignEngine.Components/Components/GridLayout.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Components/Components/GridLayout.razor
@@ -1,10 +1,10 @@
 ﻿@using H.LowCode.Metadata
 
 <div style="height: auto;">
-    @for (var i = 0; i < Rows; i++)
+    @for (var r = 0; r < Rows; r++)
     {
         <GridRow Style="min-height:85px; height: auto;">
-            @for (var i = 0; i < Cols; i++)
+            @for (var c = 0; c < Cols; c++)
            {
                 <GridCol Span="@(24/Cols)" Style="width:100%; background-color:#f4f4f4; border: 1px dashed #ded9d9;">
                     <DropItemContainer></DropItemContainer>
